							   -*- coding: utf-8 -*-
			     BZFlag Release Notes                           
			     ====================


BZFlag 2.99.x
------------
* Exposed pauseOnMinimize local variable for iconify pausing - Sean Morrison
* Added a new flag, Cloaked Shot - Alexander Boyd
* Screenshot compression is done in a new thread - Daniel Remenak, randomparticle
* Slot numbers on scoreboard now appear regardless of hideAdmin - Joshua Bodine
* Allow plugins to register custom flag types - Daniel Remenak
* Fix bug where users get locked into autopilot mode - Joshua Bodine
* improved French localization - Christophe Henry
* clean up various keypress warnings, add slow motion warning - Sean Morrison
* changed default slow motion key binding from 'a' to 'v' - Sean Morrison
* added the ability to query ping times on the server menu - Phillip Vaxorcist
* wings more realistic now only adding to current velocity - Phillip Vaxorcist
* fixed issues on some SMP Linux systems due to bad timekeeping - biggeruniverse
* fixed bug where players sometimes received duplicate messages - Joshua Bodine
* New font system - Sean Morrison, Jeff Myers
* Fixed framerate jitter-inducing bug on SMP systems - Sean Morrison
* First map no longer ignored in Start Server menu - Ravu al Hemio
* Check for talk permission for part/quit messages  - uso
* Implemented Confine Mouse for Windows platforms - Daniel Remenak
* Implemented fullscreen->windowed mode toggle on Windows - Daniel Remenak
* Add -filterAnnounce server option - Bernt Hansen
* framerate independent keyboard turn dampening - Sean Morrison, randomparticle
* Added new bzfs -botsPerIP option to limit bot connections - Sean Morrison
* Updated zlib to version 1.2.3 - Sean Morrison
* Anti-aliased rendering option - Snick
* Added bzfscron plugin to execute commands on time intervals - Daniel Remenak
* Removed original BSD advertising clause from 3rd party code - Sean Morrison
* Polish language filter updates - harry666t